Trello #299 Discourse design tweaks: #6 fix :visited links are too dark and indistinguishable from normal text

--- a/assets/stylesheets/common/foundation/variables.scss
+++ b/assets/stylesheets/common/foundation/variables.scss
@@ -49,6 +49,6 @@ $primary_border_color: $gray-lighter-SP;
 
 $link_color:  $blue-SP;
 
-$link-color-visited: darken($blue-SP, 10%);
-$link-color-hover: darken($blue-SP, 10%);
-$link-color-active: darken($blue-SP, 10%);
+$link-color-visited: $blue-SP;
+$link-color-hover: lighten($blue-SP, 10%);
+$link-color-active: lighten($blue-SP, 10%);
